improving index.html & javascript.js

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -18,56 +18,56 @@
   			<ul class="image_list">
     			<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo1.png" alt="豚肉" />
-						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" value="10-276"/>
+						<img class="thumbnail" src="/media/images/foo1.png" alt="豚肉" id="10-276">
+						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" id="10-276" value="10-276">
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="牛肉" />
-						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" value="10-275"/>
+						<img class="thumbnail" src="/media/images/foo2.png" alt="牛肉" id="10-275">
+						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" id="10-275" value="10-275">
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="鶏肉" />
-						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" value="10-277"/>
+						<img class="thumbnail" src="/media/images/foo2.png" alt="鶏肉" id="10-277">
+						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" id="10-277" value="10-277">
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="ひき肉" />
-						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" value="10-278"/>
+						<img class="thumbnail" src="/media/images/foo2.png" alt="ひき肉" id="10-278">
+						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" id="10-278" value="10-278">
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="ソーセージ・ウインナー" />
-						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" value="10-66"/>
+						<img class="thumbnail" src="/media/images/foo2.png" alt="ソーセージ・ウインナー" id="10-66">
+						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" id="10-66" value="10-66">
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="ハム" />
-						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" value="10-67"/>
+						<img class="thumbnail" src="/media/images/foo2.png" alt="ハム" id="10-67">
+						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" id="10-67" value="10-67">
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="ベーコン" name="categories[]" value="10-68"/>
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="ベーコン" id="10-68">
+						<input class="disabled_checkbox" type="checkbox" checked  name="categories[]" id="10-68" value="10-68">
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="その他の肉" name="categories[]" value="10-69"/>
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="その他の肉" id="10-69">
+						<input class="disabled_checkbox" type="checkbox" checked name="categories[]" id="10-69" value="10-69">
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="肉類全て" name="categories[]" value="10"/>
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="肉類全て" id="10">
+						<input class="disabled_checkbox" type="checkbox" checked  name="categories[]" id="10" value="10">
 					</div>
 				</li>
 			</ul>
@@ -76,110 +76,110 @@
 			<ul class="image_list">
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="サーモン・サケ" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="サーモン・サケ" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="イワシ" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="イワシ" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="サバ" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="サバ" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="アジ" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="アジ" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="ぶり" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="ぶり" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="さんま" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="さんま" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="たい" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="たい" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="マグロ" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="マグロ" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="その他の魚" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="その他の魚" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="エビ" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="エビ" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="イカ" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="イカ" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="たこ" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="たこ" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="貝類" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="貝類" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="かに" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="かに" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="たら" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="たら" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="かき" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="かき" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="明太子・魚卵" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="明太子・魚卵" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="その他の魚介" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="その他の魚介" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 			</ul>
@@ -188,56 +188,56 @@
 			<ul class="image_list">
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="豚肉" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="豚肉" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="牛肉" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="牛肉" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="鶏肉" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="鶏肉" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="ひき肉" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="ひき肉" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="ソーセージ・ウインナー" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="ソーセージ・ウインナー" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="ハム" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="ハム" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="ベーコン" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="ベーコン" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="その他の肉" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="その他の肉" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 				<li>
 					<div class="image_box">
-						<img class="thumbnail" src="/media/images/foo2.png" alt="肉類全て" />
-						<input class="disabled_checkbox" type="checkbox" checked />
+						<img class="thumbnail" src="/media/images/foo2.png" alt="肉類全て" >
+						<input class="disabled_checkbox" type="checkbox" checked >
 					</div>
 				</li>
 			</ul>
@@ -245,7 +245,7 @@
 	</div>
 	<div class="btn-send-form" role="group" aria-label="Basic example">
   		<button type="submit" class="btn btn-danger">検索</button>
-  		<button type="reset" class="btn btn-outline-info">クリア</button>
+  		<button type="button" class="btn btn-outline-info" id="clear">クリア</button>
 	</div>
 </form>
 {% endblock %}
