--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -48,3 +48,37 @@ ul.image_list li .image_box {
 .btn-send-form .btn-danger{
 	margin-right: 10px;
 }
+#recipe_result .article{
+	height: 250px;
+	width: 800px;
+	margin-top: 20px;
+}
+#recipe_result .article figure{
+	float: left;
+	height: 250px;
+	width: 250px;
+	margin: 0;
+}
+#recipe_result .article figure img{
+	border-radius: 5px;
+	height: 250px;
+	width: 250px;
+}
+.recipe-info{
+	display: inline-block;
+	float: right;
+	width: 500px;
+}
+.recipe-info h1{
+	margin-top: 0px;
+	margin-bottom: 1.2rem;
+}
+#recipe_result .article-date{
+	color: #8B8B8B;
+	margin-left: 1rem;
+}
+.recipe-info p{
+	color: #8B8B8B;
+}
+
+
