--- a/templates/home/searchResult.html
+++ b/templates/home/searchResult.html
@@ -4,7 +4,7 @@
 <h1>検索結果</h1>
 <div id="recipe_result">
 	{% for i in result %}
-		<a href="{{ i.recipeUrl }}">
+		<button class="recipe-btn" onclick="location.href='{{ i.recipeUrl }}'">
 			<article class="article">
 				<figure>
 					<img src="{{ i.foodImageUrl }}">
@@ -17,7 +17,7 @@
 					<p>{{ i.recipeDescription }}</p>
 				</div>
 			</article>
-		</a>
+		</button>
 	{% endfor %}
 </div>
 {% endblock %}
