--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,16 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         {% if user.is_authenticated %}
-                         <a class="nav-link disabled" href="{% url 'app:site_user_logout' %}">Logout</a>
+                         <a class="nav-link" href="{% url 'app:site_user_logout' %}">Logout</a>
                         {% else %}
-                        <a class="nav-link disabled" href="{% url 'app:site_user_login' %}">Login</a>
+                        <a class="nav-link" href="{% url 'app:site_user_login' %}">Login</a>
                         {% endif %}
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'app:index' %}">レシピ検索</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'app:random' %}">ランダムレシピ</a>
                     </li>
                 </ul>
             </div>
